--- a/lms/03-GoingDeeper/06-ocr/02-prj.ipynb
+++ b/lms/03-GoingDeeper/06-ocr/02-prj.ipynb
@@ -79,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-23T07:11:31.709679Z",
-     "start_time": "2020-11-23T07:11:31.704632Z"
+     "end_time": "2020-11-25T09:34:22.225001Z",
+     "start_time": "2020-11-25T09:34:22.220414Z"
     }
    },
    "outputs": [],
@@ -138,13 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-25T09:34:30.344935Z",
+     "start_time": "2020-11-25T09:34:30.341858Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "path = os.path.join(os.getenv('HOME'),'aiffel/ocr')\n",
+    "path = os.path.join(os.getenv('HOME'),'lsg/data/mj')\n",
     "os.chdir(path)"
    ]
   },
@@ -157,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-23T06:21:14.371050Z",
-     "start_time": "2020-11-23T06:21:14.253812Z"
+     "end_time": "2020-11-25T09:34:38.055368Z",
+     "start_time": "2020-11-25T09:34:37.931118Z"
     }
    },
    "outputs": [
@@ -169,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/lsg/AIFFEL_LSG/lms/03-GoingDeeper/06-ocr\r\n"
+      "/home/ubuntu/lsg/data/mj\r\n"
      ]
     }
    ],
@@ -197,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-23T07:09:37.532303Z",
-     "start_time": "2020-11-23T07:09:37.525710Z"
+     "end_time": "2020-11-25T09:34:41.630176Z",
+     "start_time": "2020-11-25T09:34:41.626403Z"
     }
    },
    "outputs": [
@@ -244,30 +249,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-23T07:11:48.910325Z",
-     "start_time": "2020-11-23T07:11:48.905083Z"
+     "end_time": "2020-11-25T09:36:23.849551Z",
+     "start_time": "2020-11-25T09:36:23.846336Z"
     }
    },
    "outputs": [],
    "source": [
     "\n",
     "BATCH_SIZE = 128\n",
-    "HOME_DIR = os.getenv('HOME')+'/AIFFEL_LSG/lms/03-GoingDeeper/06-ocr'\n",
+    "HOME_DIR = os.getenv('HOME')+'/lsg/data/mj'\n",
     "\n",
-    "TRAIN_DATA_PATH = HOME_DIR+'/MJ/MJ_train'\n",
-    "VALID_DATA_PATH = HOME_DIR+'/MJ/MJ_valid'\n",
-    "TEST_DATA_PATH = HOME_DIR+'/MJ/MJ_test'"
+    "TRAIN_DATA_PATH = HOME_DIR+'/MJ_train'\n",
+    "VALID_DATA_PATH = HOME_DIR+'/MJ_valid'\n",
+    "TEST_DATA_PATH = HOME_DIR+'/MJ_test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-25T09:36:50.395607Z",
+     "start_time": "2020-11-25T09:36:50.384372Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ubuntu/lsg/data/mj/MJ_test'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TEST_DATA_PATH"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,23 +301,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-23T07:13:51.288591Z",
-     "start_time": "2020-11-23T07:13:51.051367Z"
+     "end_time": "2020-11-25T09:36:26.016007Z",
+     "start_time": "2020-11-25T09:36:25.988416Z"
     }
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "/home/ubuntu/aiffel/ocr/MJ/MJ_train: No such file or directory",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'decode'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mError\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-d75b6ad64faa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0menv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlmdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAIN_DATA_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_readers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreadonly\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlock\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreadahead\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmeminit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbegin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtxn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mError\u001b[0m: /home/ubuntu/aiffel/ocr/MJ/MJ_train: No such file or directory"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-d75b6ad64faa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mlabel_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'label-%09d'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtxn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mimg_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'image-%09d'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mimgbuf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtxn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'decode'"
      ]
     }
    ],
@@ -840,11 +863,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-23T07:20:13.152710Z",
-     "start_time": "2020-11-23T07:18:34.907954Z"
+     "end_time": "2020-11-23T07:26:58.291657Z",
+     "start_time": "2020-11-23T07:25:20.057076Z"
     }
    },
    "outputs": [
@@ -901,11 +924,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-23T07:20:13.447125Z",
-     "start_time": "2020-11-23T07:20:13.425401Z"
+     "end_time": "2020-11-23T07:26:58.320844Z",
+     "start_time": "2020-11-23T07:26:58.301810Z"
     }
    },
    "outputs": [
@@ -916,7 +939,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-260bf1ce08cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras_ocr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDetector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mSAMPLE_IMG_PATH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'sample.jpg'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdetector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDetector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-24-260bf1ce08cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras_ocr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDetector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mSAMPLE_IMG_PATH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'sample.jpg'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdetector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDetector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras_ocr'"
      ]
     }
