--- a/lms/01-EXPLORATION/E29-ainize/01-basic.ipynb
+++ b/lms/01-EXPLORATION/E29-ainize/01-basic.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-26T13:31:09.070918Z",
-     "start_time": "2020-11-26T13:31:09.068127Z"
+     "end_time": "2020-11-26T13:57:56.004485Z",
+     "start_time": "2020-11-26T13:57:56.002746Z"
     }
    },
    "outputs": [],
@@ -18,16 +18,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# docker 설치\n",
+    "- ubuntu https://hiseon.me/linux/ubuntu/install-docker/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# library install"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-26T13:40:31.835486Z",
-     "start_time": "2020-11-26T13:40:30.064494Z"
+     "end_time": "2020-11-26T13:56:16.568793Z",
+     "start_time": "2020-11-26T13:56:14.711511Z"
     }
    },
    "outputs": [
@@ -35,16 +50,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in indexes: http://ftp.daumkakao.com/pypi/simple\n",
-      "Collecting keras\n",
-      "  Downloading http://mirror.kakao.com/pypi/packages/44/e1/dc0757b20b56c980b5553c1b5c4c32d378c7055ab7bfa92006801ad359ab/Keras-2.4.3-py2.py3-none-any.whl (36 kB)\n",
-      "Requirement already satisfied: numpy in /home/ubuntu/anaconda3/envs/aiffel/lib/python3.8/site-packages (1.18.5)\n",
-      "Requirement already satisfied: scipy>=0.14 in /home/ubuntu/anaconda3/envs/aiffel/lib/python3.8/site-packages (from keras) (1.5.4)\n",
-      "Requirement already satisfied: h5py in /home/ubuntu/anaconda3/envs/aiffel/lib/python3.8/site-packages (from keras) (2.10.0)\n",
-      "Requirement already satisfied: pyyaml in /home/ubuntu/anaconda3/envs/aiffel/lib/python3.8/site-packages (from keras) (5.3.1)\n",
-      "Requirement already satisfied: six in /home/ubuntu/anaconda3/envs/aiffel/lib/python3.8/site-packages (from h5py->keras) (1.15.0)\n",
-      "Installing collected packages: keras\n",
-      "Successfully installed keras-2.4.3\n"
+      "Requirement already satisfied: keras in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (2.4.3)\r\n",
+      "Requirement already satisfied: numpy in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (1.18.5)\r\n",
+      "Requirement already satisfied: pyyaml in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from keras) (5.3.1)\r\n",
+      "Requirement already satisfied: h5py in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from keras) (2.10.0)\r\n",
+      "Requirement already satisfied: scipy>=0.14 in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from keras) (1.4.1)\r\n",
+      "Requirement already satisfied: six in /home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages (from h5py->keras) (1.15.0)\r\n"
      ]
     }
    ],
@@ -71,8 +82,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-26T13:31:33.740587Z",
-     "start_time": "2020-11-26T13:31:30.233442Z"
+     "end_time": "2020-11-26T13:56:21.970827Z",
+     "start_time": "2020-11-26T13:56:17.801608Z"
     }
    },
    "outputs": [
@@ -80,11 +91,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning into 'mnist-mlp-app'...\n",
+      "'mnist-mlp-app'에 복제합니다...\n",
       "remote: Enumerating objects: 81, done.\u001b[K\n",
       "remote: Total 81 (delta 0), reused 0 (delta 0), pack-reused 81\u001b[K\n",
-      "Unpacking objects: 100% (81/81), done.\n",
-      "Checking connectivity... done.\n"
+      "오브젝트 묶음 푸는 중: 100% (81/81), 완료.\n"
      ]
     }
    ],
@@ -178,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
