--- a/lms/01-EXPLORATION/E29-ainize/01-basic.ipynb
+++ b/lms/01-EXPLORATION/E29-ainize/01-basic.ipynb
@@ -110,11 +110,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "sudo"
+   ]
   },
   {
    "cell_type": "code",
@@ -162,6 +162,28 @@
    "outputs": [],
    "source": [
     "!docker build -t mnist-mlp-app ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-26T14:13:03.571612Z",
+     "start_time": "2020-11-26T14:13:03.419930Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got permission denied while trying to connect to the Docker daemon socket at unix:///var/run/docker.sock: Get http://%2Fvar%2Frun%2Fdocker.sock/v1.40/images/json: dial unix /var/run/docker.sock: connect: permission denied\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!docker images"
    ]
   },
   {
